body dark mode android potential fix.
added css styling to help it work a bit better on android google chrome.

--- a/main.css
+++ b/main.css
@@ -1,5 +1,11 @@
+html{
+    height: 100%;
+    min-height: 100%;
+}
+
 body {
     background-color: #2D2D2F;
+    min-height: 100%;
 }
 
 h1, p, button.homebutton{
